src/test/ui/feature-gate-start.stderr
error[E0658]: a #[start] function is an experimental feature whose signature may change over time (see issue #29633)
  --> $DIR/feature-gate-start.rs:12:1
   |
LL | fn foo() {} //~ ERROR: a #[start] function is an experimental feature
   | ^^^^^^^^^^^
   |
   = help: add #![feature(start)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
